# esp32_ble_spp

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.c
main/src/: ble_spp_server.c  ble_spp_server.h  bsp.h  cmd_decl.h  console_ll.c  console_ll.h  shell_driver.c  shell_driver.h
python/: .gitignore  setup.py
