idf_component_register(SRCS 
                            "main.c"
                            "src/ble_spp_server.c"
                            "src/console_ll.c"
                            "src/shell_driver.c"
                    INCLUDE_DIRS 
                            "."
                            "src/"
                    )